--- a/src/Game.css
+++ b/src/Game.css
@@ -6,18 +6,26 @@
 .board
 {
   margin-top: 20px;
-  border: 1px outset #666;
+  border: 4px inset #ccc;
 }
 
 button.square
 {
   display: block;
   float: left;
-  border: 1px inset #666;
-  width: 40px;
-  height: 40px;
+  width: 30px;
+  height: 30px;
   cursor: pointer;
   text-align: center;
+
+  font-family: 'Arial';
+  font-weight: bold;
+  font-size: 20px;
+
+  background-color: #ddd;
+  border-style: outset;
+  border-width: 4px;
+  border-color: #fff #ccc #ccc #fff;
 }
 
 button.square.break
@@ -27,7 +35,10 @@ button.square.break
 
 button.square.revealed
 {
-  background-color: #fff;
+  border: 1px solid #aaa;
+  border-right-width: 0;
+  border-bottom-width: 0;
+  box-shadow: none;
 }
 
 button.square.flag
@@ -43,6 +54,17 @@ button.square.mine
   background-repeat: no-repeat;
   background-position: center;
 }
+
+button.square.highlight { background-color: red; }
+
+button.square.m1 { color: #0000ff; }
+button.square.m2 { color: #009900; }
+button.square.m3 { color: #ff3300; }
+button.square.m4 { color: #660066; }
+button.square.m5 { color: #800000; }
+button.square.m6 { color: #669999; }
+button.square.m7 { color: #000000; }
+button.square.m8 { color: #d9d9d9; }
 
 div.clear
 {
